--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "dir": "ltr",
   "lang": "en",
-  "name": "Windows 11 by Rajaniraiyn",
+  "name": "Windows 11 by nateci",
   "short_name": "Windows 11",
   "scope": "/windows11/?source=pwa",
   "display": "fullscreen",
